# agent-toolbox

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/: done.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: skill-conventions.md  trigger-registry.yml
evals/: README.md  result-schema.json
evals/results/: baseline.json  representative.json
plugins/done/.claude-plugin/: plugin.json
plugins/done/.codex-plugin/: plugin.json
plugins/done/hooks/: hooks.json
plugins/done/scripts/: quality-gate-stop.sh
plugins/done/skills/done/: SKILL.md
plugins/github-operations/.claude-plugin/: plugin.json
plugins/github-operations/.codex-plugin/: plugin.json
plugins/github-operations/lib/github_operations/: __init__.py  cli.py  github.py  models.py  planning.py  safety.py  state.py
plugins/github-operations/skills/github-issue-create/: SKILL.md
plugins/github-operations/skills/github-project-provisioning/: SKILL.md
plugins/gog/.claude-plugin/: plugin.json
plugins/gog/.codex-plugin/: plugin.json
plugins/gog/skills/gog-calendar/: SKILL.md
plugins/toolbox/.claude-plugin/: plugin.json
plugins/toolbox/.codex-plugin/: plugin.json
scripts/: __init__.py  model_trigger_adapter.py  model_trigger_adapter.rb  run_trigger_eval.py  run_trigger_eval.rb  trigger_eval.py  trigger_eval.rb  validate.py  validate.rb
tests/: test_github_operations.py  test_gog_contract.py  test_trigger_eval.py  test_validate.py
tooling/: skillspector-scan.sh
(+86 files in other folders)
