[project]
name = "agent-toolbox-tooling"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.2,<7"]

[dependency-groups]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<1"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins/toolbox/skills/typescript-project-foundation/scripts/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
